# ros_python

./: ros_python.sh  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
install/my_python/lib/my_python/: my_listener  my_talker
install/my_python/share/my_python/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_py_pkg/lib/ros2_py_pkg/: my_listener  my_talker
install/ros2_py_pkg/share/ros2_py_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
